--- a/aws-mls-crypto-hpke/Cargo.toml
+++ b/aws-mls-crypto-hpke/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 default = []
 
 [dependencies]
-aws-mls-core = { path = "../aws-mls-core" }
-aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits" }
+aws-mls-core = { path = "../aws-mls-core", version = "*" }
+aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", version = "*" }
 thiserror = "^1"
 zeroize = { version = "^1.3", features = ["zeroize_derive"] }
 hex = { version = "^0.4.3", features = ["serde"] }
@@ -19,7 +19,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "^1.0" }
 assert_matches = "1.5.0"
 mockall = "0.11"
-aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", features = ["mock"] }
+aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", features = ["mock"], version = "*" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl"}
+aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", version = "*"}
