--- a/aws-mls-crypto-openssl/Cargo.toml
+++ b/aws-mls-crypto-openssl/Cargo.toml
@@ -9,10 +9,10 @@ default = ["x509"]
 
 [dependencies]
 openssl = { version = "^0.10.40" }
-aws-mls-core = { path = "../aws-mls-core" }
-aws-mls-identity-x509 = { path = "../aws-mls-identity-x509", optional = true }
-aws-mls-crypto-hpke = { path = "../aws-mls-crypto-hpke" }
-aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits" }
+aws-mls-core = { path = "../aws-mls-core", version = "*" }
+aws-mls-identity-x509 = { path = "../aws-mls-identity-x509", optional = true, version = "*" }
+aws-mls-crypto-hpke = { path = "../aws-mls-crypto-hpke", version = "*" }
+aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", version = "*" }
 thiserror = "^1"
 enum-iterator = "1.1.2"
 
