--- a/aws-mls-crypto-traits/Cargo.toml
+++ b/aws-mls-crypto-traits/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 mock = ["dep:mockall"]
 
 [dependencies]
-aws-mls-core = { path = "../aws-mls-core" }
+aws-mls-core = { path = "../aws-mls-core", version = "*" }
 mockall = { version = "^0.11", optional = true }
