Move `PskStore` to aws-mls-core and make it async (#642)
* Move `PskStore` to aws-mls-core and make it async

* Correct benchmarks rename of master->main

--- a/.github/workflows/benchmarks_merge.yml
+++ b/.github/workflows/benchmarks_merge.yml
@@ -2,7 +2,7 @@ name: Benchmarks on Merge
 on:
   push:
     branches:
-      - master
+      - main
 env:
   SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 jobs:
