--- a/.github/workflows/benchmarks_pr.yml
+++ b/.github/workflows/benchmarks_pr.yml
@@ -2,7 +2,7 @@ name: Benchmarks on PR
 on:
   pull_request:
     branches:
-      - master
+      - main
 env:
   SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 jobs:
