Put the `external_client` module behind a feature flag and document (#676)
* Put the `external_client` module behind a feature flag and document

* Make `test_utils` internal

* Apply suggestions from code review

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>
Co-authored-by: mulmarta <103590845+mulmarta@users.noreply.github.com>

* Address PR feedback

* fixup

---------

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>
Co-authored-by: mulmarta <103590845+mulmarta@users.noreply.github.com>

--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -9,6 +9,7 @@ benchmark = ["serde_json", "aws-mls-crypto-openssl", "aws-mls-core/benchmark"]
 default = ["rayon"]
 arbitrary = ["dep:arbitrary", "aws-mls-core/arbitrary"]
 rayon = ["dep:rayon"]
+external_client = []
 
 [dependencies]
 async-trait = "0.1.61"
