--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Clippy
       run: cargo clippy --all-targets --all-features --workspace -- -D warnings
     - name: Test
-      run: cargo test --verbose --workspace
+      run: cargo test --all-features --verbose --workspace
