--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aws-mls-core"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 
 [features]
@@ -12,7 +12,7 @@ async-trait = "0.1.61"
 tls_codec = "0.2.0"
 tls_codec_derive = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
-zeroize = { version = "^1.3", features = ["zeroize_derive"] }
+zeroize = { version = "1", features = ["zeroize_derive"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
 serde_with = "^2"
 base64 = "0.20.0"
