--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aws-mls"
-version = "0.19.0"
+version = "0.20.0"
 authors = ["Tom Leavy <tom@wickr.com>"]
 edition = "2021"
 
@@ -26,7 +26,7 @@ itertools = "0.10.3"
 der = { version = "^0.6.0", features = ["alloc"]}
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = { version = "^1.0", optional = true }
-zeroize = { version = "^1.3", features = ["zeroize_derive"] }
+zeroize = { version = "1", features = ["zeroize_derive"] }
 debug_tree = "0.4.0"
 arbitrary = { version = "1", features = ["derive"], optional = true }
 # TODO: https://github.com/GoogleChromeLabs/wasm-bindgen-rayon
