Passive client tests (#703)
* Add passive client test vectors

* Sync jsons with github

* Remove duplication

* Fix dependencies

* Fix wasm

* Fix bug

* Apply suggestions from code review

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

---------

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "aws-mls-identity-x509",
     "aws-mls/fuzz",
     "aws-mls/test_harness_integration",
+    "aws-mls/test_utils",
     "aws-mls-crypto-openssl",
     "aws-mls-crypto-rustcrypto",
     "aws-mls-crypto-hpke",
