--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -51,6 +51,7 @@ criterion = { version = "0.3.5", features = ["async_futures", "html_reports"] }
 futures-test = "0.3.25"
 serde_json = "^1.0"
 rand = "0.8"
+test_utils = { path = "test_utils" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "^0.2.79" }
