--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -14,7 +14,7 @@ tls_codec_derive = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 zeroize = { version = "1", features = ["zeroize_derive"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
-serde_with = "^2"
+serde_with = "2.3.1"
 base64 = "0.20.0"
 thiserror = "^1"
 enum-iterator = "1.1.3"
