Add WASM tests to HPKE (#728)
* Add WASM tests to HPKE

* Fix typo

* Add WASM HPKE test to CI

--- a/.github/workflows/wasm_build.yml
+++ b/.github/workflows/wasm_build.yml
@@ -26,4 +26,7 @@ jobs:
     - name: WASM aws-mls-identity-x509
       working-directory: aws-mls-identity-x509
       run: wasm-pack test --headless --chrome --release
+    - name: WASM aws-mls-crypto-hpke
+      working-directory: aws-mls-crypto-hpke
+      run: wasm-pack test --headless --chrome --release
 
