Add `mls_codec` crate to prepare for `tls_codec` removal (#743)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ members = [
     "aws-mls-crypto-openssl",
     "aws-mls-crypto-rustcrypto",
     "aws-mls-crypto-hpke",
-    "aws-mls-provider-sqlite"
+    "aws-mls-provider-sqlite",
+    "aws-mls-core/aws-mls-codec",
+    "aws-mls-core/aws-mls-codec/derive"
 ]
 
 default-members = [
@@ -20,5 +22,6 @@ default-members = [
     "aws-mls-crypto-hpke",
     "aws-mls-crypto-openssl",
     "aws-mls-crypto-rustcrypto",
-    "aws-mls-provider-sqlite"
+    "aws-mls-provider-sqlite",
+    "aws-mls-core/aws-mls-codec"
 ]
