--- a/aws-mls/test_harness_integration/Cargo.toml
+++ b/aws-mls/test_harness_integration/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 publish = false
 
 [dependencies]
-aws-mls = { path = "..", features = ["benchmark"]}
+aws-mls = { path = "..", features = ["benchmark", "external_client"]}
 tonic = "0.7"
 prost = "0.10"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 clap = { version = "3", features = ["derive"] }
 thiserror = "1"
+futures = "0.3.25"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 aws-mls-crypto-rustcrypto = { path = "../../aws-mls-crypto-rustcrypto", features = ["browser"], version = "*" }
