--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -4,21 +4,23 @@ version = "0.5.0"
 edition = "2021"
 
 [features]
+default = ["std"]
 arbitrary = ["dep:arbitrary"]
 benchmark = []
+std = ["aws-mls-codec/std", "serde/std", "zeroize/std", "serde_with/std", "base64/std", "num_enum/std", "indexmap/std"]
 
 [dependencies]
 async-trait = "0.1.61"
 aws-mls-codec = { version = "*", path = "./aws-mls-codec"}
-serde = { version = "1.0", features = ["derive"] }
-zeroize = { version = "1", features = ["zeroize_derive"] }
+serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
+zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
-serde_with = "2.3.1"
-base64 = "0.20.0"
-thiserror = "^1"
+serde_with = { version = "2.3.1", default-features = false, features = ["alloc", "macros"]}
+base64 = { version = "0.20.0", default-features = false, features = ["alloc"]}
+thiserror = { package = "thiserror-core", version = "1" }
 enum-iterator = "1.1.3"
-num_enum = "0.5"
-indexmap = { version = "1.8.0", features = ["serde"] }
+num_enum = { version = "0.5", default-features = false}
+indexmap = { version = "1.8.0", default-features = false, features = ["serde"] }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
