--- a/aws-mls-provider-sqlite/Cargo.toml
+++ b/aws-mls-provider-sqlite/Cargo.toml
@@ -12,7 +12,7 @@ uuid = { version = "1.1", features = ["v4"] }
 wasm-bindgen = { version = "0.2", optional = true }
 zeroize = { version = "1", features = ["zeroize_derive"] }
 bincode = "1"
-rusqlite = { version = "0.28", default-features = false, optional = true }
+rusqlite = { version = "0.28", default-features = false }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", optional = true }
 async-trait = "0.1"
