Build aws-mls on nightly with no_std (#749)
* Build aws-mls on nightly with no_std

Support for building on armv6

fix default features

* fix ci

* add clippy to no-std build

* fix clippy for no_std

* Revert accidental workspace changes

* Fix CI

* Move interop repo further back

* Update aws-mls/src/lib.rs

* Address PR feedback

---------

Co-authored-by: Marta Mularczyk <mulmarta@amazon.ch>
Co-authored-by: mulmarta <103590845+mulmarta@users.noreply.github.com>

--- a/.github/workflows/interop_tests.yml
+++ b/.github/workflows/interop_tests.yml
@@ -21,6 +21,7 @@ jobs:
       uses: actions/checkout@master
       with:
         repository: mlswg/mls-implementations
+        ref: 3d338d341b1b02c5a2a1a631c60985ce844d2def
         path: interop
     - uses: arduino/setup-protoc@v1
       with:
