--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -7,20 +7,20 @@ edition = "2021"
 default = ["std"]
 arbitrary = ["dep:arbitrary"]
 benchmark = []
-std = ["aws-mls-codec/std", "serde/std", "zeroize/std", "serde_with/std", "base64/std", "num_enum/std", "indexmap/std"]
+std = ["aws-mls-codec/std", "serde/std", "zeroize/std", "serde_with/std", "base64/std", "num_enum/std", "indexmap/std", "thiserror/std", "indexmap"]
 
 [dependencies]
 async-trait = "0.1.61"
-aws-mls-codec = { version = "*", path = "./aws-mls-codec"}
+aws-mls-codec = { version = "*", path = "./aws-mls-codec", default-features = false}
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
-zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
+zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive", "serde"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
 serde_with = { version = "2.3.1", default-features = false, features = ["alloc", "macros"]}
 base64 = { version = "0.20.0", default-features = false, features = ["alloc"]}
-thiserror = { package = "thiserror-core", version = "1" }
+thiserror = { package = "thiserror-core", version = "1", default-features = false }
 enum-iterator = "1.1.3"
 num_enum = { version = "0.5", default-features = false}
-indexmap = { version = "1.8.0", default-features = false, features = ["serde"] }
+indexmap = { version = "1.8.0", features = ["serde"], optional = true }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
