--- a/.github/workflows/wasm_build.yml
+++ b/.github/workflows/wasm_build.yml
@@ -19,7 +19,7 @@ jobs:
       run: wasm-pack test --headless --chrome --release -- --features="browser"
     - name: WASM aws-mls
       working-directory: aws-mls
-      run: wasm-pack test --headless --chrome --release -- --no-default-features
+      run: wasm-pack test --headless --chrome --release -- --no-default-features --features="grease"
     - name: WASM aws-mls-core
       working-directory: aws-mls-core
       run: wasm-pack test --headless --chrome --release
