Low level key derivation interface (#753)
* Support direct access to the secret tree

* fix clippy

* Apply suggestions from code review

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

---------

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -11,6 +11,7 @@ arbitrary = ["std", "dep:arbitrary", "aws-mls-core/arbitrary"]
 rayon = ["std", "dep:rayon"]
 external_client = ["std"]
 grease = ["std"]
+secret_tree_access = []
 
 std = [
     "aws-mls-core/std",
