--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -18,3 +18,6 @@ jobs:
       run: cargo clippy --all-targets --all-features --workspace -- -D warnings
     - name: Test
       run: cargo test --all-features --verbose --workspace
+    - name: Examples
+      working-directory: aws-mls
+      run: cargo run --example basic_usage --features=tokio 
