--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,13 @@ default-members = [
     "aws-mls-provider-sqlite",
     "aws-mls-core/aws-mls-codec"
 ]
+
+[profile.release-mini]
+inherits = "release"
+codegen-units = 1
+lto = true
+opt-level = "z"
+strip = "debuginfo"
+debug = 0
+debug-assertions = false
+overflow-checks = false
