--- a/.github/workflows/no_std_build.yml
+++ b/.github/workflows/no_std_build.yml
@@ -15,7 +15,11 @@ jobs:
       run: cargo +nightly clippy --no-default-features -p aws-mls -- -D warnings
     - name: Test
       run: cargo +nightly test --no-default-features --verbose -p aws-mls
+    - name: Test Full RFC Compliance
+      run: cargo +nightly test --no-default-features --features rfc_compliant --verbose -p aws-mls
     - name: Build MLS Embedded
       run: cargo +nightly build --package aws-mls --lib --no-default-features --target thumbv6m-none-eabi
+    - name: Build MLS Embedded Full RFC Compliance
+      run: cargo +nightly build --package aws-mls --lib --no-default-features --features rfc_compliant --target thumbv6m-none-eabi
     - name: Build rust crypto embedded 
       run: cargo +nightly build --package aws-mls-crypto-rustcrypto --no-default-features --target thumbv6m-none-eabi
