Feature for private message support (#790)
* PrivateMessage feature

* Fix non-std build

* Fix comments and non_exhaustive

--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -14,7 +14,8 @@ grease = ["std"]
 secret_tree_access = []
 external_commit = ["aws-mls-core/external_commit"]
 state_update = []
-rfc_compliant = ["external_commit", "state_update"]
+private_message = []
+rfc_compliant = ["external_commit", "state_update", "private_message"]
 
 std = [
     "aws-mls-core/std",
