--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -8,6 +8,7 @@ default = ["std", "rfc_compliant"]
 arbitrary = ["dep:arbitrary"]
 benchmark = []
 external_commit = []
+external_proposal = []
 std = ["aws-mls-codec/std", "serde/std", "zeroize/std", "serde_with/std", "base64/std", "num_enum/std", "indexmap/std", "thiserror/std", "indexmap"]
 rfc_compliant = ["external_commit"]
 
